# l2-hybrid-protocol

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  ROADMAP.md  package.xml
.github/workflows/: ci.yml
apps/: CMakeLists.txt  hybrid_chat_app.cpp  ipc_l2_app.cpp  remote_benchmark.cpp  remote_node.cpp
bench/: bench_localhost.cpp  bench_network.cpp  main.cpp
cmake/: CMakePresetsMusl.json  MuslSupport.cmake  MuslToolchain.cmake  integration.md
include/l2net/: common.hpp  frame.hpp  hybrid_chat.hpp  interface.hpp  ipc_channel.hpp  mtu.hpp  raw_socket.hpp  ssh_session.hpp  vlan.hpp
scripts/: Dockerfile.musl  build_musl.sh  run_remote_benchmark.sh
src/: frame.cpp  hybrid_chat.cpp  interface.cpp  ipc_channel.cpp  ipc_l2.cpp  raw_socket.cpp  ssh_session.cpp  vlan.cpp
tests/common/: test_helpers.hpp
tests/integration/: main.cpp  test_localhost.cpp  test_network.cpp  test_vlan.cpp
tests/unit/: main.cpp  test_edge_cases.cpp  test_frame.cpp  test_interface.cpp  test_mtu.cpp  test_vlan.cpp
