<?xml version="1.0"?>
<package format="3">
  <name>l2net</name>
  <version>0.0.1</version>
  <description>High-performance Layer 2 raw socket networking library</description>

  <maintainer email="pavelguzenfeld@gmail.com">Pavel Guzenfeld</maintainer>
  <license>MIT</license>

  <buildtool_depend>cmake</buildtool_depend>
</package>
